src/objects/Publication_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Direct_Subscription_Mailing_Agents__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Direct Subscription - Mailing Agents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Direct_Subscription__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Direct Subscription - Vendors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vendor_Subscription_Mailing_Agents__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vendor Subscription - Mailing Agents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vendor_Subscription__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vendor Subscription - Vendors</label>
        <type>Checkbox</type>
    </fields>
    <label>Publication Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Publication Mapping Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Publication Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>